--- a/src/components/home/Images.scss
+++ b/src/components/home/Images.scss
@@ -12,7 +12,7 @@
   }
 
   &__image {
-    width: 100%;
+    width: 95%;
     height: auto;
     padding: 1rem;
     box-sizing: border-box;
