--- a/src/components/home/Testimonials.scss
+++ b/src/components/home/Testimonials.scss
@@ -1,13 +1,12 @@
-@import '../../styles/_variables';
-@import '../../styles/mixins'; 
+@import "../../styles/_variables";
+@import "../../styles/mixins";
 
 .testimonials {
   text-align: center;
-  margin: 2rem 0;
-  width: 100%;
   color: $color-primary;
   font-family: $font-primary;
-
+  width: 95%;
+  margin: 0 auto;
   &__title {
     margin-bottom: 1rem;
     font-family: $font-secondary;
@@ -16,7 +15,7 @@
   }
 
   &__button {
-    @include button-styles; 
+    @include button-styles;
   }
 }
 
@@ -66,7 +65,6 @@
     padding: 20px;
     font-size: 1rem;
     text-align: center;
-    height: 100px;
     width: 100%;
     color: $color-secondary;
     font-family: $font-primary;
